--- a/ViaJsonBuilder/Pages/Converter.razor
+++ b/ViaJsonBuilder/Pages/Converter.razor
@@ -27,7 +27,7 @@
 
             <tr>
                 <td colspan="2">
-                    <textarea style="font-family: monospace; width:100%" rows="10" @bind="@DestTxt" />
+                    <textarea style="font-family: monospace; width:100%" rows="10" @bind="@this.DestTxt" />
                 </td>
             </tr>
         </tbody>
