--- a/ViaJsonBuilder/Pages/Converter.razor
+++ b/ViaJsonBuilder/Pages/Converter.razor
@@ -1,10 +1,11 @@
 ﻿@page "/converter"
+@inject ClipboardService Clipboard
 @inject ISessionStorageService SessionStorage
 @inject IBlazorDownloadFileService BlazorDownloadFileService
 @inject KeymapBuilder KeymapBuilder
 
 <PageLayout @ref="pageBase" Title="Keymap Converter" TargetFiles="@(new[] { "<keyboard>.h","info.json"})"
-            ValidateFunc="this.Validate" OnUploadFuncAsync="this.OnUpload" OnDownloadFuncAsync="this.OnDownload">
+            ValidateFunc="this.Validate" OnUploadFuncAsync="this.OnUpload" OnDownloadFuncAsync="this.OnDownload" OnCopyClipboard="this.OnCopyClipboard">
     <table class="table table-borderless">
         <tbody>
             <tr>
@@ -169,4 +170,17 @@
         await this.SessionStorage.SetItemAsync(nameof(KleContext), this.Context);
         await this.SessionStorage.SetItemAsync(nameof(this.Keymap), this.Keymap);
     }
+
+    private async Task OnCopyClipboard()
+    {
+        try
+        {
+            await this.Clipboard.WriteTextAsync(this.Keymap);
+        }
+        catch (Exception ex)
+        {
+            this.pageBase.ShowError(ex.Message);
+        }
+    }
+
 }
