--- a/ViaJsonBuilder/_Imports.razor
+++ b/ViaJsonBuilder/_Imports.razor
@@ -7,6 +7,7 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
+@using CurrieTechnologies.Razor.Clipboard
 @using Blazored.SessionStorage
 @using BlazorDownloadFile 
 @using BlazorInputFile
