--- a/ViaJsonBuilder/Pages/Converter.razor
+++ b/ViaJsonBuilder/Pages/Converter.razor
@@ -173,13 +173,15 @@
 
     private async Task OnCopyClipboard()
     {
+        this.pageBase.ResetError();
+
         try
         {
             await this.Clipboard.WriteTextAsync(this.Keymap);
         }
-        catch (Exception ex)
+        catch
         {
-            this.pageBase.ShowError(ex.Message);
+            this.pageBase.ShowError("クリップボードへのコピーに失敗しました。ダウンロードを使用してください。");
         }
     }
 
