--- a/ViaJsonBuilder/Pages/Converter.razor
+++ b/ViaJsonBuilder/Pages/Converter.razor
@@ -10,10 +10,10 @@
         <tbody>
             <tr>
                 <td>
-                    <textarea style="font-family: monospace; width:100%" rows="10" @bind="@this.Context.LayoutDefinition" />
+                    <textarea class="text-monospace text-nowrap" style="width:100%" spellcheck="false" rows="10" @bind="@this.Context.LayoutDefinition" />
                 </td>
                 <td>
-                    <textarea style="font-family: monospace; width:100%" rows="10" @bind="@this.Context.QmkConfJson" />
+                    <textarea class="text-monospace text-nowrap" style="width:100%" spellcheck="false" rows="10" @bind="@this.Context.QmkConfJson" />
                 </td>
             </tr>
 
@@ -29,7 +29,7 @@
 
             <tr>
                 <td colspan="2">
-                    <textarea style="font-family: monospace; width:100%" rows="10" value="@this.Keymap" @onchange="this.OnKeymapChangedAsync" />
+                    <textarea class="text-monospace text-nowrap" style="width:100%" spellcheck="false" rows="10" value="@this.Keymap" @onchange="this.OnKeymapChangedAsync" />
                 </td>
             </tr>
         </tbody>
